--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "superba",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "bin": {
-    "superba": "next dev"
+    "superba": "echo hello"
   },
   "scripts": {
     "dev": "next dev -p 62223",
