--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/kv": "^0.2.3",
     "ai": "^2.2.12",
     "axios": "^1.5.0",
     "change-case": "^4.1.2",
@@ -23,6 +24,7 @@
     "eslint-config-next": "13.4.19",
     "express": "^4.18.2",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "openai": "^4.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
