fixes github stars

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "openai": "^4.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-github-btn": "^1.4.0",
     "react-markdown": "^8.0.7",
     "react-syntax-highlighter": "^15.5.0",
     "typescript": "5.2.2",
