--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "express": "^4.18.2",
+    "nanoid": "^5.0.1",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "openai": "^4.6.0",
