--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "@vercel/kv": "^0.2.3",
+    "@vercel/postgres-kysely": "^0.5.0",
     "ai": "^2.2.12",
     "axios": "^1.5.0",
     "change-case": "^4.1.2",
