--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/blob": "^0.12.5",
     "@vercel/kv": "^0.2.3",
     "@vercel/postgres-kysely": "^0.5.0",
     "ai": "^2.2.12",
@@ -29,6 +30,7 @@
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "openai": "^4.6.0",
+    "puppeteer": "^21.3.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "^1.4.0",
