--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "openai": "^4.6.0",
-    "playwright": "^1.38.1",
+    "playwright-chromium": "^1.38.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "^1.4.0",
