--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "scripts": {
     "dev": "next dev -p 1355",
     "build": "next build",
-    "postinstall": "npx playwright install",
     "start": "next start -p 1355",
     "lint": "next lint",
     "tauri": "tauri"
@@ -32,7 +31,7 @@
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "openai": "^4.6.0",
-    "playwright": "^1.38.1",
+    "puppeteer": "^21.3.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-github-btn": "^1.4.0",
