--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/blob": "^0.12.5",
     "@vercel/kv": "^0.2.3",
     "@vercel/postgres-kysely": "^0.5.0",
